--- a/backend/package.json
+++ b/backend/package.json
@@ -7,18 +7,21 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "nodemon index.js"
     },
+    "type": "commonjs",
     "keywords": [],
-    "author": "",
-    "license": "ISC",
+    "author": "Sync Insights",
+    "license": "MIT",
     "dependencies": {
         "bcryptjs": "^2.4.3",
-        "cookie-parser": "^1.4.6",
+        "cookie-parser": "^1.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
-        "express": "^4.18.3",
+        "express": "^4.21.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.2.1",
-        "nodeman": "^1.1.2",
-        "nodemon": "^3.1.0"
+        "sequelize": "^6.37.4"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.4"
     }
 }
